# site-oxidation

./: .dockerignore  .env.example  .env.unraid.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.unraid.yml  docker-compose.yml  docker-entrypoint.sh
.github/: CODEOWNERS  SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: development.md  environment_variables.md  error-taxonomy.md  feature_ideas.md  migrations.md
frontend/: .gitignore  .npmrc  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: 01-first-run.spec.ts  02-admin.spec.ts  03-sites.spec.ts  04-notifications.spec.ts  05-user.spec.ts
frontend/e2e/helpers/: admin.ts  auth.ts  index.ts  notifications.ts  teams.ts
frontend/public/: README.md
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/icons/: EyeIcon.tsx  EyeOffIcon.tsx  IconBase.tsx  README.md  SearchIcon.tsx  index.tsx
frontend/src/components/sites/: SiteForm.tsx  SiteList.tsx  SiteRow.tsx
frontend/src/components/ui/: AdminNav.tsx  AppShell.tsx  CertBadge.tsx  ConfirmDialog.tsx  CopyButton.tsx  ErrorMessage.tsx  FormControls.tsx  FormToggleButton.tsx  (+8 more)
frontend/src/hooks/: useAdmin.ts  useAuth.ts  useDebouncedValue.ts  useOutages.ts  usePagination.ts  useSetup.ts  useSites.ts  useTeamNotifications.ts  useThemePreference.ts
frontend/src/lib/: api.ts  queryKeys.ts
frontend/src/pages/: AdminTeamDetail.tsx  AdminTeams.tsx  AdminUsers.tsx  Backups.tsx  ChangePassword.tsx  Dashboard.tsx  Login.tsx  Notifications.tsx  Setup.tsx  SiteDetail.tsx
frontend/src/styles/: README.md  base.css  buttons.css  cards.css  feedback.css  forms.css  layout.css  navigation.css  shell.css  tables.css  theme.css  typography.css
migrations/: 20251226195900_initial.sql  20260608000000_initial.sql  20260608213000_add_user_theme_preference.sql  20260624000000_initial.sql
scripts/: docker-reset.sh  e2e-server.sh  generate-schema.sh  lint.sh  lint_backend.sh  lint_frontend.sh  lint_full.sh
src/: auth_backend.rs  config.rs  db.rs  main.rs  models.rs  net.rs  state.rs
src/api/: auth.rs  auth_queries.rs  errors.rs  extractors.rs  healthcheck.rs  mod.rs  pagination.rs  queries_setup.rs  schema.rs  search.rs  setup.rs  text.rs
src/api/admin/: admin_queries.rs  endpoints_teams.rs  endpoints_users.rs  mod.rs  params.rs  queries_teams.rs  queries_users.rs  requests.rs  responses.rs  schema.rs  teams_endpoints.rs  users_endpoints.rs
src/api/auth/: endpoints.rs  mod.rs  queries.rs  requests.rs  responses.rs  schema.rs
src/api/setup/: endpoints.rs  mod.rs  queries.rs  responses.rs  schema.rs
src/api/sites/: access.rs  endpoints.rs  fields.rs  mod.rs  queries.rs  requests.rs  responses.rs  rules.rs  schema.rs  sites_access.rs  sites_endpoints.rs  sites_queries.rs  sites_validators.rs  validators.rs
src/api/teams/: access.rs  endpoints.rs  fields.rs  mod.rs  queries.rs  requests.rs  responses.rs  rules.rs  schema.rs  validators.rs
src/jobs/: mod.rs  site_monitor_job.rs  site_probe.rs  site_probe_job.rs
src/models/: mod.rs  notifications.rs  site.rs  smtp.rs  user.rs
src/notifications/: delivery.rs  format.rs  mod.rs  notifier.rs  planning.rs  sender.rs  smtp.rs  webhook.rs
src/notifications/email/: mod.rs  payloads.rs
src/notifications/outbox/: mod.rs  store.rs  worker.rs
src/notifications/providers/: mod.rs
src/notifications/slack/: mod.rs  payloads.rs
src/notifications/teams/: mod.rs  payloads.rs
src/probe/: cert.rs  http.rs  mod.rs
src/security/: cors.rs  ip.rs  mod.rs  password.rs  rate_limit.rs  redaction.rs  resolver.rs  session_key.rs
src/tests/: app_builder.rs  auth_helpers.rs  fixtures.rs  http_server.rs  log_helpers.rs  mod.rs  response_helpers.rs
src/tests/api/: mod.rs  test_api_admin_teams.rs  test_api_admin_users.rs  test_api_auth.rs  test_api_cors.rs  test_api_protected_routes.rs  test_api_setup.rs  test_api_sites.rs  test_api_sites_outages.rs  test_api_sites_team_scoping.rs  test_api_team_notifications.rs
src/tests/notifications/: mod.rs  test_notifications.rs  test_outbox.rs
static/: index.html
static/assets/: index-B23JtmYZ.js  index-DYi24O6q.js
(+30 files in other folders)
