[package]
name = "site-oxidation"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
futures = "0.3.31"

[dev-dependencies]
http-body-util = "0.1.3"
serde_json = "1.0"
tower = { version = "0.5", features = ["util"] }
