[package]
name = "site-oxidation"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = "0.13.4"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
futures = "0.3.31"
url = "2.5.8"
anyhow = "1.0.102"
thiserror = "2.0.18"
axum-login = "0.18.0"
tower-sessions = { version = "=0.14.0", features = ["signed"] }
tower-sessions-sqlx-store = { version = "=0.15.0", features = ["sqlite"] }
password-auth = "1.0"
time = "0.3"
dashmap = "6"
getrandom = "0.2"
tokio-rustls = "0.26"
rustls-platform-verifier = "0.7"
x509-cert = { version = "0.2", default-features = false, features = ["std"] }

[dev-dependencies]
http-body-util = "0.1.3"
rstest = "0.26.1"
serde_json = "1.0"
tower = { version = "0.5", features = ["util"] }

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
unwrap_in_result = "warn"
expect_used = "warn"
panic = "warn"
panic_in_result_fn = "warn"
indexing_slicing = "warn"
arithmetic_side_effects = "warn"
as_conversions = "warn"
clone_on_ref_ptr = "warn"
str_to_string = "warn"
implicit_clone = "warn"
shadow_unrelated = "warn"
missing_assert_message = "warn"
