[package]
name = "site-oxidation"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/johnwaghorn/site-oxidation"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.8"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.45", features = ["serde"] }
tower-http = { version = "0.7.0", features = ["cors", "fs"] }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
futures = "0.3.31"
url = "2.5.8"
anyhow = "1.0.102"
thiserror = "2.0.18"
axum-login = "0.18.0"
tower-sessions = { version = "=0.14.0", features = ["signed"] }
tower-sessions-sqlx-store = { version = "=0.15.0", features = ["sqlite"] }
password-auth = "1.0"
time = "0.3"
dashmap = "6"
getrandom = "0.4.2"
tokio-rustls = "0.26"
rustls-platform-verifier = "0.7"
x509-cert = { version = "0.2", default-features = false, features = ["std"] }
lettre = { version = "0.11.22", default-features = false, features = ["smtp-transport", "builder", "hostname", "tokio1", "tokio1-rustls-tls", "tokio1-rustls", "rustls-platform-verifier", "aws-lc-rs"] }

[dev-dependencies]
http-body-util = "0.1.3"
rstest = "0.26.1"
tower = { version = "0.5", features = ["util"] }
tracing-test = "0.2.6"

[lints.clippy]
pedantic = "deny"
unwrap_used = "deny"
unwrap_in_result = "deny"
expect_used = "deny"
panic = "deny"
panic_in_result_fn = "deny"
indexing_slicing = "deny"
arithmetic_side_effects = "deny"
as_conversions = "deny"
clone_on_ref_ptr = "deny"
str_to_string = "deny"
implicit_clone = "deny"
shadow_unrelated = "deny"
missing_assert_message = "deny"
